--- a/index.html
+++ b/index.html
@@ -618,8 +618,17 @@
                 </div>
               </div>
 
+
+              <div class="subsection">
+                <h2 id="nome-del-progetto-e-repository-github">Demo interattiva</h2>
+                <p>Per provare la demo interattiva di Mosaicon scaricare il progetto da GitHub e seguire le istruzioni nel README.md</p>
+                <!--<p>Nome del progetto: MOSAICON</p>
+                <!--<p>Repository del sito di presentazione progetto: <a href="https://github.com/SoNet-2017/MOSAICON">https://github.com/SoNet-2017/MOSAICON</a></p>-->
+                <p>Repository del prototipo (codice HTML + CSS + AngularJS): <a href="https://github.com/SoNet-2017/MOSAICON-code">https://github.com/SoNet-2017/MOSAICON-code</a></p>
+              </div>
+
             <div class="subsection">
-              <h4>Analisi sugli utenti tester:</h4>
+              <h4>Analisi sugli utenti tester</h4>
               Usability test su mockup di navigazione<br/>
               <br/>
               <img class="grafici" src="images/usabilityTEST.png"><br/><br/>
@@ -643,15 +652,6 @@
             </div>
           </div>
 
-          <div class="subsection">
-            <h2 id="nome-del-progetto-e-repository-github">Nome del progetto e repository github</h2>
-
-            <p>Nome del progetto: MOSAICON</p>
-            <p>Repository del sito di presentazione progetto: <a href="https://github.com/SoNet-2017/MOSAICON">https://github.com/SoNet-2017/MOSAICON</a></p>
-            <p>Repository del prototipo (codice): <a href="https://github.com/SoNet-2017/MOSAICON-code">https://github.com/SoNet-2017/MOSAICON-code</a></p>
-
-
-          </div>
           <div class="subsection">
             <h2 id="membri-del-team">Team</h2>
 
