added new flowchart

--- a/index.html
+++ b/index.html
@@ -577,8 +577,8 @@
             <div class="row" id="grafici1">
               <div class="col-md-6">
                 <div class="thumbnail">
-                  <a href="images/Flowchart.png" data-lightbox="image-1" data-title="Flowchart">
-                    <img src="images/Flowchart.png" alt="Flowchart" style="width:82%">
+                  <a href="images/flow_diagrams.png" data-lightbox="image-1" data-title="Flowchart">
+                    <img src="images/flow_diagrams.png" alt="Flowchart" style="width:82%">
                     <div class="caption">
                       <p>Flowchart</p>
                     </div>
