added new wireframe

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             <h2 id="presentazione-concept">Presentazione del concept</h2>
             <h3 id="concept">Vision</h3>
             <p>
-              Mosaicon è il social network delle dirette streaming online degli eventi di musica elettronica che risponde alle esigenze degli appartenenti alla sottocultura del Clubbing di condividere contenuti, documentare le feste e fare auto-promozione.<br/>
+              Mosaicon è il social network delle dirette streaming degli eventi di musica elettronica, che risponde alle esigenze degli appartenenti alla sottocultura del Clubbing di condividere contenuti, documentare le feste e fare auto-promozione.<br/>
               Ogni evento può essere riprodotto dal vivo attraverso uno streaming audio in alta qualità della musica suonata dal DJ.</br>I Clubbers possono riprendere col proprio smartphone una diretta video, da mandare in streaming, sincronizzata alla traccia audio del DJ set.<br/>
               Tramite l’applicazione web e mobile, da remoto, si possono selezionare i vari punti di vista degli eventi, grazie ad un player fatto a mosaico, e reperire informazioni sulle località nelle quali si svolgono.<br/>
               In questo modo gli organizzatori possono usufruire di un servizio orizzontale gratuito per promuovere le proprie attività.<br/><br/>
@@ -572,10 +572,10 @@
 
           <div class="subsection">
             <h3 id="architettura-dellinformazione">Architettura dell'informazione</h3>
-            <p> Flow-chart e wireframe completo con Axure RP.</p>
-            <a href="https://projects.invisionapp.com/prototype/MOSAICON-prototype-cjjjt0if7002307019172adu3" style="color: #5e5e5e"><strong>Link del progetto</strong></a>
+            <p> Flow-chart e wireframe completo con Axure RP. Prova la Preview tramite la piattaforma Axure Share.</p>
+            <a href="https://jyh9lr.axshare.com/#g=1&p=mosaic_live_events" style="color: #5e5e5e"><strong>Link del progetto</strong></a>
             <div class="row" id="grafici1">
-              <div class="col-md-6">
+              <div class="col-md-12">
                 <div class="thumbnail">
                   <a href="images/flow_diagrams.png" data-lightbox="image-1" data-title="Flowchart">
                     <img src="images/flow_diagrams.png" alt="Flowchart" style="width:82%">
@@ -584,32 +584,38 @@
                     </div>
                   </a>
                 </div>
-              </div>
-              <div class="col-md-6">
+                  <div class="thumbnail">
+                      <a href="images/architecture.png" data-lightbox="image-2" data-title="Architecture">
+                          <img src="images/architecture.png" alt="Architecture" style="width:100%">
+                          <div class="caption">
+                              <p>Architecture</p>
+                          </div>
+                      </a>
+                  </div>
                 <div class="thumbnail">
-                  <a href="images/diagramma%20funzionalità%20definitivo.png" data-lightbox="image-2" data-title="Upload Media Function">
-                    <img src="images/diagramma%20funzionalità%20definitivo.png" alt="Upload media function" style="width:100%">
-                    <div class="caption">
-                      <p>Upload media function</p>
-                    </div>
-                  </a>
+                    <a href="images/wireframe.png" data-lightbox="image-3" data-title="Wireframe">
+                        <img src="images/wireframe.png" alt="Wireframe" style="width:82%">
+                        <div class="caption">
+                            <p>Wireframe</p>
+                            <a href="https://jyh9lr.axshare.com/#g=1&p=mosaic_live_events" style="color: #5e5e5e">[versione completa e navigabile]</a>
+                        </div>
+                    </a>
                 </div>
               </div>
             </div>
 
             <div class="subsection">
               <h2 id="mockup">Mockup</h2>
-              <p>Prototipo di screen design con InVision Studio. Press play and enjoy the live event view.</p>
+              <p>Prototipo di screen design con InVision Studio. Premi play e vivi la live event view.</p>
               <a href="https://projects.invisionapp.com/prototype/MOSAICON-prototype-cjjjt0if7002307019172adu3" style="color: #5e5e5e"><strong>Link del progetto</strong></a>
+              <p></p>
               <div class="row">
-                <div class="col-md-6">
+                <div class="col-md-12">
                   <div class="thumbnail">
                     <a href="images/mosaiconInVisionStudio2.png" data-lightbox="image-3" data-title="mockup1">
                       <img src="images/mosaiconInVisionStudio2.png" alt="mockup1" style="width:99%">
                     </a>
                   </div>
-                </div>
-                <div class="col-md-6">
                   <div class="thumbnail">
                     <a href="images/mosaiconInVisionStudio1.png" data-lightbox="image-4" data-title="mockup2">
                       <img src="images/mosaiconInVisionStudio1.png" alt="mockup2" style="width:100%">
